k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-hello-service
  labels:
    app: fastapi-hello
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: fastapi-hello
